--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -29,6 +29,7 @@ pycodestyle==2.9.1
 pycparser==2.21
 pyflakes==2.5.0
 PyJWT==2.4.0
+python-decouple==3.6
 python3-openid==3.2.0
 pytz==2022.2.1
 PyYAML==6.0
