--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.5.2
 certifi==2022.9.14
 cffi==1.15.1
 charset-normalizer==2.1.1
+colorama==0.4.6
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==38.0.1
@@ -16,6 +17,7 @@ djangorestframework-simplejwt==4.7.2
 djoser==2.1.0
 drf-pdf==0.2.0
 flake8==5.0.4
+gunicorn==20.1.0
 idna==3.4
 importlib-metadata==1.7.0
 itypes==1.2.0
@@ -24,7 +26,8 @@ MarkupSafe==2.1.1
 mccabe==0.7.0
 oauthlib==3.2.1
 Pillow==9.2.0
-psycopg2==2.9.3
+progress==1.6
+psycopg2-binary==2.9.5
 pycodestyle==2.9.1
 pycparser==2.21
 pyflakes==2.5.0
@@ -40,6 +43,7 @@ six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.3.0
 sqlparse==0.4.2
+tqdm==4.64.1
 typing_extensions==4.3.0
 uritemplate==4.1.1
 urllib3==1.26.12
