--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
         with:
           context: backend/
           push: true
-          tags: tonik350/foodgram-backend:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-backend:latest
 
   deploy:
     runs-on: ubuntu-latest
