--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
         # Пуш образа в Docker Hub
         uses: docker/build-push-action@v2
         with:
-          context: /backend
+          context: ./backend
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/foodgram-backend:latest
 
